colang-cli/tests/samples/good/strings_share_memory.co
fun main() {
  var s = "aba";
  var q = s;
  s[0] = 'c';
  assert(s == "cba");
  assert(q == "cba");
}
