colang-cli/tests/samples/compile_error/unknown_escape_in_str_literal.co
fun main() {
  var s = "abacab\va";
}
